--- a/package.json
+++ b/package.json
@@ -1,38 +1,30 @@
 {
   "name": "vuetify-modifiable-table",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "NODE_ENV=production vue-cli-service build --target lib",
+    "build-demo": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "core-js": "3.3.6",
+    "vue": "2.6.10",
+    "vuetify": "2.1.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+    "@vue/cli-plugin-babel": "4.0.5",
+    "@vue/cli-plugin-typescript": "4.0.5",
+    "@vue/cli-service": "4.0.5",
+    "sass": "1.23.3",
+    "sass-loader": "8.0.0",
+    "typescript": "3.6.4",
+    "vue-class-component": "7.1.0",
+    "vue-cli-plugin-typescript": "0.0.1",
+    "vue-cli-plugin-vuetify": "1.1.2",
+    "vue-property-decorator": "8.3.0",
+    "vue-template-compiler": "2.6.10",
+    "vuetify-loader": "1.3.0"
   },
   "postcss": {
     "plugins": {
