--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "allowJs": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "declaration": false,
+    "declaration": true,
+    "declarationDir": ".",
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
