--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vue-template-compiler": "2.6.10",
     "vuetify-loader": "1.3.0"
   },
+  "types": "modifiable-table.vue.d.ts",
+  "main": "dist/vuetify-modifiable-table.umd.js",
   "postcss": {
     "plugins": {
       "autoprefixer": {}
