--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-modifiable-table",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "scripts": {
     "serve": "vue-cli-service serve src/demo/main.ts",
     "build": "NODE_ENV=production vue-cli-service build --target lib --skip-plugins vuetify src/modifiable-table.vue",
@@ -16,15 +16,20 @@
     "vue-class-component": "7.1.0",
     "vue-cli-plugin-vuetify": "1.1.2",
     "vue-property-decorator": "8.3.0",
-    "vue-template-compiler": "^2",
+    "vue-template-compiler": "2.x",
     "vuetify-loader": "1.3.0"
   },
-  "peerDependencies": {
+  "dependencies": {
     "vue": "2.x",
     "vuetify": "2.x"
   },
   "types": "modifiable-table.vue.d.ts",
   "main": "dist/vuetify-modifiable-table.umd.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bobbylight/vuetify-modifiable-table"
+  },
+  "license": "BSD-3-Clause",
   "postcss": {
     "plugins": {
       "autoprefixer": {}
@@ -33,9 +38,5 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ],
-  "dependencies": {
-    "vue": "2.6.11",
-    "vuetify": "2.1.15"
-  }
+  ]
 }
